test/type_inference/negative/type_args1.impala
fn f[A](g: fn(fn(A)->A)->(), a: A) -> () {
}

fn main() -> () {
    f(|x: fn(i32)->i32| -> () {}, true)
}
